# matecode

./: .gitignore  AI_CHAT_FEATURE.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_PLATFORM_IMPROVEMENTS.md  Cargo.toml  DISCUSSION.md  DISCUSSIONS_SETUP.md  LICENSE  README.md  build.rs  install.sh  pdf_ocr_validator.html  test_debug.sarif  test_file.rs  test_python.py
.github/discussions/: categories.yml  welcome-post.md
.github/discussions/templates/: bug-report.md  experience-share.md  feature-request.md  usage-question.md
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: build.bat  build.sh  install.ps1  install.sh
src/: cli.rs  config.rs  errors.rs  git.rs  history.rs  hook.rs  language.rs  lib.rs  main.rs  toolchain.rs
src/analyzers/: mod.rs  python.rs  rust.rs
src/commands/: archive.rs  branch.rs  commit.rs  init.rs  install_hook.rs  linter.rs  mod.rs  plan.rs  report.rs  review.rs  test.rs  understand.rs
src/config/prompts/: commit.toml  review_lint_issue.toml  review_sarif.toml  understand.toml
src/llm/: gemini.rs  mod.rs  openai.rs
src/plan/: analyzer.rs  executor.rs  generator.rs  mod.rs  storage.rs
tests/: integration_test.rs
