[package]
name = "matecode"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dateparser = "0.2.1"
dialoguer = "0.11.0"
dirs = "6.0.0"
fmt = "0.1.0"
futures = "0.3.31"
ignore = "0.4.23"
indicatif = "0.18.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
quick-xml = { version = "0.36.2", features = ["serialize"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strip-ansi-escapes = "0.2.1"
termimad = "0.33.0"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
fs_extra = "1.3"
mockito = "1.4.0"
